WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93825
[WK2] [WTR] InjectedBundlePage::didFailLoadForResource invokes wrong callback
https://bugs.webkit.org/show_bug.cgi?id=93825
Summary
[WK2] [WTR] InjectedBundlePage::didFailLoadForResource invokes wrong callback
Mikhail Pozdnyakov
Reported
2012-08-13 05:03:58 PDT
void InjectedBundlePage::didFailLoadForResource(WKBundlePageRef page, WKBundleFrameRef frame, uint64_t identifier, WKErrorRef error, const void* clientInfo) { static_cast<InjectedBundlePage*>(const_cast<void*>(clientInfo))->didFinishLoadForResource(page, frame, identifier, error); } should be void InjectedBundlePage::didFailLoadForResource(WKBundlePageRef page, WKBundleFrameRef frame, uint64_t identifier, WKErrorRef error, const void* clientInfo) { static_cast<InjectedBundlePage*>(const_cast<void*>(clientInfo))->didFailLoadForResource(page, frame, identifier, error); }
Attachments
patch
(1.77 KB, patch)
2012-08-13 05:08 PDT
,
Mikhail Pozdnyakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mikhail Pozdnyakov
Comment 1
2012-08-13 05:08:54 PDT
Created
attachment 157965
[details]
patch
Chris Dumez
Comment 2
2012-08-13 05:11:50 PDT
Comment on
attachment 157965
[details]
patch LGTM.
Grzegorz Czajkowski
Comment 3
2012-08-13 06:36:21 PDT
Comment on
attachment 157965
[details]
patch Nice catch.
WebKit Review Bot
Comment 4
2012-08-13 07:20:07 PDT
Comment on
attachment 157965
[details]
patch Clearing flags on attachment: 157965 Committed
r125418
: <
http://trac.webkit.org/changeset/125418
>
WebKit Review Bot
Comment 5
2012-08-13 07:20:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug