[WK2] [WTR] InjectedBundlePage::didFailLoadForResource invokes wrong callback https://bugs.webkit.org/show_bug.cgi?id=93825

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-08-13
Reviewed by Antonio Gomes.

Corrected from didFinishLoadForResource() invoke to didFailLoadForResource() invoke.

* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
(WTR::InjectedBundlePage::didFailLoadForResource):

Canonical link: https://commits.webkit.org/111693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125418 268f45cc-cd09-0410-ab3c-d52691b4dbfc